--- a/1.html
+++ b/1.html
@@ -3,6 +3,6 @@
     <title>First Program in GitHub</title>
   </head>
   <body>
-    This is a example program to know the pull effect in Git.
+    <h3>Commit 2</h3>
   </body>
 </html>
